--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -1,11 +1,30 @@
-<table>
-<tr>
-  <th>Title:</th>
-  <th>Duration:</th>
-</tr>
-  <% @song_list.each do |s| %>
-<tr>
-  <td><%= s["title"] %></td>
-  <td><%= s["duration"] %></td></tr>
-<% end %>
-</table>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <title>Setlist</title>
+  </head>
+    <body>
+
+    <header>
+      <h1>Mel's Whacky Setlist Website</h1>
+    </header>
+
+  <div class="container">
+    <table>
+      <tr>
+        <th>Title:</th>
+        <th>Duration:</th>
+      </tr>
+        <% @song_list.each do |s| %>
+      <tr>
+        <td><%= s["title"] %></td>
+        <td><%= s["duration"] %></td>
+      </tr>
+    <% end %>
+    </table>
+  </div>
+
+    </body>
+</html>
