--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -15,18 +15,20 @@ header {
 
 body {
   background: lightgrey;
+  margin: 0;
+  padding: 0;
 }
 
 div.container {
   position: relative;
   display: block;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 85px;
   margin-left: 10px;
   margin-right: 10px;
   border: 3px black;
   padding: 10px;
-  width: 60%;
+  width: 92%;
   height: 100%;
   float: left;
   background: white;
