--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -8,7 +8,7 @@
     <body>
 
     <header>
-      <h1>Mel's Whacky Setlist Website</h1>
+      <h1>Mel's Whacky Setlist</h1>
     </header>
 
   <div class="container">
